Rename to folio_overrides

--- a/assets/src/sass/folio_overrides.scss
+++ b/assets/src/sass/folio_overrides.scss
@@ -7,7 +7,7 @@
 // Imports
 // -------------------------------- //
 
-	// @import "_local_overrides.field-association";
+	// @import "_folio_overrides.field-association";
 
 // Form Controls
 // -------------------------------- //
