--- a/assets/src/sass/folio_overrides.fields.scss
+++ b/assets/src/sass/folio_overrides.fields.scss
@@ -39,7 +39,7 @@
 	bottom: 0;
 	width: 2.2rem;
 	height: 100%;
-	background: url(local_overrides.selector.svg) center no-repeat;
+	background: url(folio_overrides.selector.svg) center no-repeat;
 	opacity: 0.7;
 }
 
