--- a/assets/src/sass/_folio_overrides.field-association.scss
+++ b/assets/src/sass/_folio_overrides.field-association.scss
@@ -2,59 +2,59 @@
 // Association fields
 // -------------------------------- //
 
-	/* published yes/no */
+/* published yes/no */
 
-	.field-association {
-		// span.published-Yes {
+.field-association {
+	// span.published-Yes {
+	// }
+	span.published-No {
+		color: hsl(0, 0%, 70%);
+		// font-weight: bolder;
+		// font-style: italic;
+		// text-decoration: line-through;
+
+		// &:after {
+		// 	content: "(Unpublished)";
+		// 	font-weight: bolder;
+		// 	padding-left: 0.6em;
 		// }
-		span.published-No {
-			color: hsl(0, 0%, 70%);
-			// font-weight: bolder;
-			// font-style: italic;
-			// text-decoration: line-through;
+	}
+}
 
-			// &:after {
-			// 	content: "(Unpublished)";
-			// 	font-weight: bolder;
-			// 	padding-left: 0.6em;
-			// }
+// .page-index td.field-selectbox_link,
+.page-index td.field-association {
+	// position: relative;
+	color: transparent;
+	line-height: 0;
+
+	a {
+		line-height: 1.5em;
+		padding: 0;
+		margin: 0;
+		border-bottom: 0 none;
+		display: block;
+		min-width: none;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
+
+		.published-Yes {
+			border-bottom: 1px solid hsla(215, 45%, 45%, 0.15);
+		}
+		.published-No {
+			border-bottom: 1px solid hsla(0, 0%, 70%, 0.25);
 		}
 	}
+}
 
-	// .page-index td.field-selectbox_link,
-	.page-index td.field-association {
-		// position: relative;
-		color: transparent;
-		line-height: 0;
-
-		a {
-			line-height: 1.5em;
-			padding: 0; margin: 0;
-			border-bottom: 0 none;
-			display: block;
-			min-width: none;
-			white-space: nowrap;
-			overflow: hidden;
-			text-overflow: ellipsis;
-
-			.published-Yes {
-				border-bottom: 1px solid hsla(215, 45%, 45%, 0.15);
-			}
-			.published-No {
-				border-bottom: 1px solid hsla(0, 0%, 70%, 0.25);
-			}
-		}
+.page-edit .field-association {
+	span.published-No,
+	span.published-Yes {
+		// display: inline-block !important;
+		padding: 0 !important;
+		min-width: none;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
-
-	.page-edit .field-association {
-		span.published-Yes,
-		span.published-No {
-			// display: inline-block !important;
-			padding: 0 !important;
-			min-width: none;
-			white-space: nowrap;
-			overflow: hidden;
-			text-overflow: ellipsis;
-		}
-	}
-
+}
