--- a/assets/src/sass/folio_overrides.fields.scss
+++ b/assets/src/sass/folio_overrides.fields.scss
@@ -1,40 +1,36 @@
 
-
 // -----------------------------------
 // taglists used as attributes
 // -----------------------------------
-// .section-handle-bundles,.section-images-bundles,
-#field-33, #field-25, #field-40, #field-39 {
+#field-25,
+#field-33,
+#field-39,
+#field-40 {
 	&.local-taglist {
-		textarea,
 		input[type=text],
+		textarea,
 		ul.tags {
 			font-family: consolas, menlo, monospace;
 		}
 		ul.tags {
-//			-webkit-column-width: 24em;
-//			-moz-column-width: 24em;
-			column-width: 24em;
-//			max-height: 9em;
-//			overflow: scroll;
+			max-height: 9em;
+			overflow-x: hidden;
+			overflow-y: scroll;
+			border-color: hsl(0, 0%, 80%);
+			border-width: 1px 0;
+			border-style: solid;
+			padding: 0 2px;
 		}
 		.tags li {
-			display: block;
-			box-sizing: border-box;
-			font-size: 100%;
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-			
-//			display: inline-block;
-//			color: hsl(0,0%,50%);
-//			background-color: hsl(0,0%,95%);
-//			border-radius: 4px;
-//			padding: 1px 6px 0px;
-//			margin: 2px 0px; border: 1px solid hsl(0, 0%, 80%);
-//			margin: 3px 1px;
-//			box-shadow: 1px 1px 1px -1px hsl(0, 0%, 50%);
-//			background-color: rgb(255, 255, 255);
+			display: inline-block;
+			color: hsl(0,0%,50%);
+			background-color: hsl(0,0%,95%);
+			border-radius: 4px;
+			padding: 1px 6px 0;
+			margin: 2px 0;
+			border: 1px solid hsl(0, 0%, 80%);
+			margin: 3px 1px;
+			background-color: #eee;
 		}
 	}
 }
@@ -61,7 +57,7 @@
 	bottom: 0;
 	width: 2.2rem;
 	height: 100%;
-	background: url(folio_overrides.selector.svg) center no-repeat;
+	background: url('folio_overrides.selector.svg') center no-repeat;
 	opacity: 0.7;
 }
 
@@ -222,7 +218,7 @@
 	overflow: hidden;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
-	margin: 0.2rem 0 0 0;
+	margin: 0.2rem 0 0;
 	border-radius: 0.4rem;
 	background: #fff;
 	box-shadow: inset 0 0 0 0.1rem #c5c5c5, 0 0.3rem 0.5rem rgba(0, 0, 0, 0.2);
@@ -290,7 +286,6 @@
 .local-sbl .selectize-dropdown .active em {
 	color: rgba(255, 255, 255, 0.7);
 }
-
 
 .local-sbl .multi .ordering .destructor {
 	color: rgba(255, 255, 255, 0.7);
