--- a/assets/src/sass/folio_overrides.scss
+++ b/assets/src/sass/folio_overrides.scss
@@ -1,7 +1,7 @@
 // Color palette
 // -------------------------------- //
 
-$focus-color: #5273c0;//hsl(221,46%,53%);
+$focus-color: #5273c0; //hsl(221,46%,53%);
 $focus-background-color: #e9effc;
 
 // Imports
@@ -53,9 +53,9 @@ $focus-background-color: #e9effc;
 // }
 
 /* focus: text inputs */
+.field label > input[type="text"]:focus,
 .field-date select:focus,
-.field-textarea textarea:focus,
-.field label > input[type="text"]:focus {
+.field-textarea textarea:focus {
 	border-color: $focus-color;
 }
 ::selection {
@@ -72,7 +72,7 @@ $focus-background-color: #e9effc;
 // -----------------------------------
 td.field-upload img {
 	vertical-align: text-top;
-	box-shadow: 0px 2px 3px -1px rgba(0, 0, 0, 0.75);
+	box-shadow: 0 2px 3px -1px rgba(0, 0, 0, 0.75);
 }
 
 .unpublishedfilter-draft td.field-upload img {
@@ -83,5 +83,5 @@ td.field-upload img {
 .field-upload .frame img {
 	margin-left: 2px;
 	margin-right: 2px;
-	box-shadow: 0px 2px 3px -2px rgba(0, 0, 0, 0.75);
+	box-shadow: 0 2px 3px -2px rgba(0, 0, 0, 0.75);
 }
