--- a/assets/src/sass/folio_overrides.fields.scss
+++ b/assets/src/sass/folio_overrides.fields.scss
@@ -5,7 +5,8 @@
 #field-25,
 #field-33,
 #field-39,
-#field-40 {
+#field-40,
+#field-89 {
 	&.local-taglist {
 		input[type=text],
 		textarea,
@@ -13,24 +14,22 @@
 			font-family: consolas, menlo, monospace;
 		}
 		ul.tags {
-			max-height: 9em;
+			max-height: 12em;
 			overflow-x: hidden;
 			overflow-y: scroll;
-			border-color: hsl(0, 0%, 80%);
-			border-width: 1px 0;
+			border-color: hsl(0, 0%, 70%);
+			border-width: 1px 0 1px;
 			border-style: solid;
-			padding: 0 2px;
+			padding: 4px 2px;
 		}
 		.tags li {
 			display: inline-block;
-			color: hsl(0,0%,50%);
+			color: hsl(0,0%,40%);
 			background-color: hsl(0,0%,95%);
-			border-radius: 4px;
-			padding: 1px 6px 0;
-			margin: 2px 0;
-			border: 1px solid hsl(0, 0%, 80%);
-			margin: 3px 1px;
-			background-color: #eee;
+			padding: 0 3px;
+			margin: 1px -2px;
+			border-radius: 2px;
+			border: 1px solid hsl(0, 0%, 85%);
 		}
 	}
 }
