--- a/assets/src/sass/folio_overrides.scss
+++ b/assets/src/sass/folio_overrides.scss
@@ -1,12 +1,9 @@
-// Color palette
+
 // -------------------------------- //
-
-$focus-color: #5273c0; //hsl(221,46%,53%);
-$focus-background-color: #e9effc;
-
 // Imports
 // -------------------------------- //
 
+@import "colors";
 // @import "_folio_overrides.field-association";
 
 // Form Controls
