--- a/assets/src/sass/folio_overrides.fields.scss
+++ b/assets/src/sass/folio_overrides.fields.scss
@@ -47,8 +47,8 @@
 			max-height: 12em;
 			overflow-x: hidden;
 			overflow-y: scroll;
-			border-color: hsl(0, 0%, 70%);
-			border-width: 1px 0 1px;
+			border-color: hsl(0, 0%, 80%);
+			border-width: 1px 0;
 			border-style: solid;
 			padding: 4px 2px;
 		}
@@ -135,7 +135,7 @@
 	border-top: 0.1rem solid #ccc;
 	background-color: #f5f5f5;
 	box-shadow: inset 0 0.1rem 0 #fff, 0 0.2rem 0.15rem rgba(0, 0, 0, 0.15);
-	padding-right: 7rem;
+	// padding-right: 7rem;
 }
 
 .local-sbl .multi .item + .item {
@@ -213,10 +213,11 @@
 .local-sbl .multi .destructor {
 	display: block;
 	position: absolute;
-	top: 0.7rem;
-	right: 1rem;
-	margin: 0;
+	top: 0;
+	right: 0;
+	padding: 0.8rem 0.8rem 0.8rem 0.5rem;
 	color: #aeaeae;
+	background-color: #f5f5f5;
 	font-weight: normal;
 	border-bottom: none;
 }
